--- a/dev/1/404.html
+++ b/dev/1/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/SymbolicAnalysis.jl/dev/assets/style.DlJ8H3aV.css" as="style">
     <link rel="preload stylesheet" href="/SymbolicAnalysis.jl/dev/vp-icons.css" as="style">
     
-    <script type="module" src="/SymbolicAnalysis.jl/dev/assets/app.ByR0xckF.js"></script>
+    <script type="module" src="/SymbolicAnalysis.jl/dev/assets/app.B0dXKCwZ.js"></script>
     <link rel="preload" href="/SymbolicAnalysis.jl/dev/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="icon" href="REPLACE_ME_DOCUMENTER_VITEPRESS_FAVICON">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
