build based on 7135c2d

--- a/dev/1/index.html
+++ b/dev/1/index.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/SymbolicAnalysis.jl/dev/assets/style.DlJ8H3aV.css" as="style">
     <link rel="preload stylesheet" href="/SymbolicAnalysis.jl/dev/vp-icons.css" as="style">
     
-    <script type="module" src="/SymbolicAnalysis.jl/dev/assets/app.B0dXKCwZ.js"></script>
+    <script type="module" src="/SymbolicAnalysis.jl/dev/assets/app.ByR0xckF.js"></script>
     <link rel="preload" href="/SymbolicAnalysis.jl/dev/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/SymbolicAnalysis.jl/dev/assets/chunks/theme.D5jk1d0v.js">
+    <link rel="modulepreload" href="/SymbolicAnalysis.jl/dev/assets/chunks/theme.B6r_E3TD.js">
     <link rel="modulepreload" href="/SymbolicAnalysis.jl/dev/assets/chunks/framework.CaVaq3B8.js">
     <link rel="modulepreload" href="/SymbolicAnalysis.jl/dev/assets/index.md.DAAvbqgK.lean.js">
     <link rel="icon" href="REPLACE_ME_DOCUMENTER_VITEPRESS_FAVICON">
